# ufa-rs

./: .gitignore  Cargo.toml  LICENSE-MIT
.github/workflows/: rust.yml
src/: bash.rs  dotfile.rs  generator.rs  lib.rs  logger.rs  requester.rs  utils.rs
src/codec/: base64.rs
src/generator/: date.rs  mod.rs  others.rs  person.rs
src/json/: mod.rs  utils.rs
src/logger/: color.rs  custom.rs  log.rs  mod.rs
src/regex/: utils.rs
src/requester/: models.rs  request.rs
src/unix/: mod.rs  models.rs  utils.rs
