[package]
name = "ufa"
version = "1.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alan-venv/ufa-rs"
description = "A small toolkit"
rust-version = "1.83"
keywords = ["lib", "utils"]

[dependencies]
rand = "0.8.5"
chrono = "0.4.39"
serde_json = "1.0.135"
uuid = { version = "1.12.0", features = ["v4"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
default-features = false
features = ["consoleapi", "processenv", "winbase"]
