[package]
name = "ufa"
version = "1.3.5"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alan-venv/ufa-rs"
description = "A small toolkit"
rust-version = "1.83"
keywords = ["lib", "utils"]

[dependencies]
rand = "0.9.0"
chrono = "0.4.40"
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
base64 = "0.22.1"
serde = "1.0.219"
regex = "1.11.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
default-features = false
features = ["consoleapi", "processenv", "winbase"]
