[package]
name = "ufa"
version = "1.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alan-venv/ufa-rs"
description = "A small toolkit"
rust-version = "1.83"
keywords = ["lib", "utils"]

[dependencies]
rand = { version = "0.10.0", optional = true }
chrono = { version = "0.4.44", optional = true }
base64 = { version = "0.22.1", optional = true }
regex = { version = "1.12.3", optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
uuid = { version = "1.23.0", features = ["v4"], optional = true }
reqwest = { version = "0.13.2", features = ["blocking", "form"], optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = ">=0.48,<=0.61"
features = ["Win32_Foundation", "Win32_System_Console"]
optional = true

[features]
default = ["full"]
full = ["request", "json", "codec", "regex", "generator", "logger"]
request = ["dep:reqwest", "dep:serde_json"]
json = ["dep:serde", "dep:serde_json"]
codec = ["dep:base64"]
regex = ["dep:regex"]
generator = ["dep:uuid", "dep:rand", "dep:chrono"]
logger = ["dep:windows-sys"]
